docs: update test

--- a/tests/index.html
+++ b/tests/index.html
@@ -27,7 +27,7 @@
         .header-content {
             display: flex;
             align-items: center;
-            justify-between;
+            justify-content: space-between;
         }
 
         .header-title {
@@ -80,7 +80,6 @@
             padding: 6px 16px;
             display: flex;
             align-items: center;
-            justify-between;
             font-size: 12px;
         }
 
@@ -160,8 +159,7 @@
             cursor: pointer;
             transition: background-color 0.15s;
             display: flex;
-            align-items: center;
-            justify-between;
+            align-items: justify-between;
             font-size: 13px;
         }
 
