test: refactory tests #4: restore a feature to preview the testing source codes

--- a/tests/index.html
+++ b/tests/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SQLite3 OPFS/WASM Test Runner</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./node_modules/highlight.js/styles/atom-one-dark.css" />
 </head>
 
 <body>
