--- a/samples/index.html
+++ b/samples/index.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     hello
     <script type="module">
-        import WebSqlite from '../dist/index.js';
-        await WebSqlite()
-
-
+      import WebSqlite from "../dist/index.js";
+      await WebSqlite();
     </script>
-</body>
-
+  </body>
 </html>
