refactor: Update typecheck command and improve database handling in worker
- Update `typecheck` in package.json to use `tsc --noEmit` (type checks without file emission)
- Refactor `src/main.ts`:
  - Rename `start` to `openDB` with filename parameter support
  - Implement auto-incrementing message IDs and promise mapping for worker communication
  - Introduce DB state management (open/closed)
- Update `samples/index.html` to use the new `openDB` API and log success message
- Add `src/types/message.d.ts` for type-safe worker message structures

--- a/samples/index.html
+++ b/samples/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    hello
-    <script type="module">
-      import WebSqlite from "../dist/index.js";
-      await WebSqlite();
-    </script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  hello
+  <script type="module">
+    import WebSqlite from "../dist/index.js";
+    await WebSqlite('hello-word.sqlite');
+    console.log("DB has been opened successfully");
+  </script>
+</body>
+
 </html>
