--- a/samples/index.html
+++ b/samples/index.html
@@ -1,19 +1,17 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-</head>
-
-<body>
-  hello
-  <script type="module">
-    import WebSqlite from "../dist/index.js";
-    await WebSqlite('hello-word.sqlite');
-    console.log("DB has been opened successfully");
-  </script>
-</body>
-
+  <body>
+    hello
+    <script type="module">
+      import WebSqlite from "../dist/index.js";
+      await WebSqlite("hello-word.sqlite");
+      console.log("DB has been opened successfully");
+    </script>
+  </body>
 </html>
