test(e2e): Add multi-instance query test and improve examples   - Add test for multiple DB instances querying the same database file   - Update samples/index.html with comprehensive usage example   - Add TODO.md with documentation planning for web worker limitations

--- a/samples/index.html
+++ b/samples/index.html
@@ -10,8 +10,35 @@
     hello
     <script type="module">
       import WebSqlite from "../dist/index.js";
-      await WebSqlite("hello-word.sqlite");
-      console.log("DB has been opened successfully");
+      const db = await WebSqlite("hello-word.sqlite", { debug: true });
+
+      // 1.1 Remove existing table, then create table and insert data.
+      await db.exec("DROP TABLE IF EXISTS test;");
+      await db.exec(
+        "CREATE TABLE IF NOT EXISTS test (id INTEGER PRIMARY KEY, name TEXT);",
+      );
+
+      const testData = [
+        { id: 1, name: "Alice" },
+        { id: 2, name: "Bob" },
+      ];
+
+      // 1.2 Fill the mock data.
+      for (const row of testData) {
+        await db.exec("INSERT INTO test (id, name) VALUES ($id, $name);", {
+          $id: row.id,
+          $name: row.name,
+        });
+      }
+
+      // 2. Test the query API.
+      const ids = testData.map((item) => item.id);
+      const placeholders = ids.map(() => "?").join(", ");
+      const rows = await db.query(
+        `SELECT * FROM test where id IN (${placeholders}) ORDER BY id;`,
+        ids,
+      );
+      debugger;
     </script>
   </body>
 </html>
