docs: rerfactor the cnd link for examples

--- a/samples/cdn.html
+++ b/samples/cdn.html
@@ -37,7 +37,7 @@
 
     <h2>What this page does</h2>
     <ol>
-      <li>Loads the prebuilt module from <code>https://wuchuheng.github.io/web-sqlite-js/dist/index.js</code>.</li>
+      <li>Loads the prebuilt module from <code>https://cdn.jsdelivr.net/npm/web-sqlite-js@0.0.5/dist/index.js</code>.</li>
       <li>Opens a local database file named <code>local.sqlite3</code>.</li>
       <li>Creates a <code>notes</code> table, inserts a sample row, and queries all rows.</li>
       <li>Shows the query result below.</li>
@@ -49,7 +49,7 @@
     <pre id="output">Loading...</pre>
 
     <script type="module">
-      import openDB from "https://wuchuheng.github.io/web-sqlite-js/dist/index.js";
+      import openDB from "https://cdn.jsdelivr.net/npm/web-sqlite-js@0.0.5/dist/index.js";
 
       const output = document.getElementById("output");
 
